<!--
  ~ Copyright 2015 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">Selfie</string>
    <string name="home">Home</string>
    <string name="last_initial">Last Initial</string>
    <string name="first_name">First Name</string>
    <string name="sign_in">Sign In</string>
    <string name="choose_avatar">Choose an Avatar</string>
    <string name="btn_true">True</string>
    <string name="btn_false">False</string>
    <string name="category">Category</string>
    <string name="sign_out">Sign out</string>
    <string name="x_points">%1$d pts</string>
    <string name="back">back</string>
    <string name="Sign_in">Sign in</string>
    <string name="Create_Account">Create Account</string>
    <string name="Success">Success</string>
    <string name="Failed">Failed</string>
    <string name="Loading">Loading..</string>
    <string name="already_a_member_login">Already a member? Login</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="your_name">Your Name</string>
    <string name="email_address">Email Address</string>
    <string name="name">Name</string>
    <string name="i_have_login">I have Login</string>
</resources>